--- a/src/components/styles/Nav.css
+++ b/src/components/styles/Nav.css
@@ -5,10 +5,12 @@
 }
 .feed {
   flex-grow: 1;
+  width: 33%;
 }
 .upload {
   flex-grow: 1;
   text-align: center;
+  width: 33%;
 }
 .user {
   flex-grow: 1;
@@ -16,6 +18,7 @@
   flex-direction: column;
   justify-content: flex-end;
   text-align: right;
+  width: 33%;
 }
 
 .user button {
